<resources>
    <string name="app_name">Flavor Stop</string>
    <string name="app_desc">Deliever Favorite Food</string>
    <string name="enjoy_restaurant_quality_meals_at_home">Enjoy Restaurant Quality Meals at Home</string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="admin">Admin</string>
    <string name="lorem_ipsum">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="_0_555_555_55_55">0 555 555 55 55</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="congrats_nyour_order_place">Congrats\nYour Order Place</string>
    <string name="go_home">Go Home</string>
    <string name="food_name">Food Name</string>
</resources>