<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_logo" />


    <TextView
        android:id="@+id/head_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/kanit"
        android:text="@string/sign_up_here"
        android:textColor="@color/green"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/head_textView"
        app:layout_constraintStart_toStartOf="@+id/head_textView"
        app:layout_constraintTop_toBottomOf="@+id/head_textView" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/EditTextStyle"
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableStart="@drawable/ic_user_profile"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextStyle"
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextStyle"
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/kanit"
        android:text="@string/or"
        android:textColor="@color/blackGray"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    <TextView
        android:id="@+id/textViewContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/kanit"
        android:text="@string/sign_up_with"
        android:textColor="@color/blackGray"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/textViewOr"
        app:layout_constraintStart_toStartOf="@+id/textViewOr"
        app:layout_constraintTop_toBottomOf="@+id/textViewOr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/OrButtonStyle"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableLeft="@drawable/ic_google"
        android:text="Google"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContinue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/OrButtonStyle"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawableLeft="@drawable/ic_facebook"
        android:fontFamily="@font/kanit"
        android:text="Facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textViewContinue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signButton"
        style="@style/LoginButtonStyle"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/alReadyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/kanit"
        android:text="@string/already_have_an_account"
        android:textColor="@color/blackGray"
        app:layout_constraintEnd_toEndOf="@+id/signButton"
        app:layout_constraintStart_toStartOf="@+id/signButton"
        app:layout_constraintTop_toBottomOf="@+id/signButton" />

</androidx.constraintlayout.widget.ConstraintLayout>