<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">


    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Name"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/admin" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Address"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/lorem_ipsum" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Email"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/admin_gmail_com" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Phone"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/_0_555_555_55_55" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatButton
            style="@style/SaveButtonStyle"
            android:id="@+id/saveInformationButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            />


    </LinearLayout>

</LinearLayout>