<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityPayOut" android:background="@color/white"
    android:padding="16dp"
    >



    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >



        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:fontFamily="@font/kanit_semibold"
            android:textSize="@dimen/_18ssp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/greenWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>




    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Name"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/kanit_light"
            android:inputType="textPersonName"
            android:text="@string/admin" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Address"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/kanit_light"
            android:inputType="textMultiLine"
            android:text="@string/lorem_ipsum" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Phone"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/kanit_light"
            android:inputType="textEmailAddress"
            android:text="@string/_0_555_555_55_55" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewPaymentMethod"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Payment Method"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:id="@+id/editTextPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/kanit_light"
            android:inputType="textEmailAddress"
            android:text="@string/admin_gmail_com" />
    </LinearLayout>

    <LinearLayout
        style="@style/ProfileEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"

        >


        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:fontFamily="@font/kanit_medium"
            android:text="Total Amount"
            android:textColor="@color/blackGray"
            android:textSize="@dimen/_14ssp" />

        <EditText
            android:gravity="end"
            android:id="@+id/editTextText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/kanit_semibold"
            android:textColor="@color/greenWhite"
            android:textSize="@dimen/_15ssp"
            android:inputType="phone"
            android:text="30 ₺" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatButton
            style="@style/SaveButtonStyle"
            android:id="@+id/placeMyOrder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:text="Place Order"
            android:layout_marginBottom="@dimen/_50sdp"
            />


    </LinearLayout>

</LinearLayout>